--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 </head>
 
 <body>
-    <div class="container-fluid w-75 m-auto" id="main-content">
-        <div class="container p-3">
+    <div class="container-fluid w-75" id="main-content">
+        <!-- HEADER -->
+        <div class="page" id="header-section">
             <div class="row d-flex flex-wrap align-items-center">
                 <div class="
                 offset-3 col-6 pb-3
@@ -164,9 +165,11 @@
             <div class="project">
                 <h5>Personal Website</h5>
                 <p class="indent">
-                    Hosted under GitHub pages, my <a href="https://emballou.github.io/" target="_blank">website</a>
-                    (this one!) is my first website outside of coursework. It's main purpose is to familiarize 
-                    myself with Bootstrap, as well as further practice previous skills such as HTML, CSS, and JavaScript.
+                    My personal <a href="https://emballou.github.io/" target="_blank" class="outline">website</a> is my first website outside 
+                    of coursework, as well as my first real personal project. It's main purpose is to familiarize 
+                    myself with Bootstrap, provide some information about myself, and 
+                    to further practice  skills such as HTML, CSS, and JavaScript. 
+                    It is hosted under <a href="https://pages.github.com/" target="_blank" class="outline">GitHub pages</a>.
                 </p>
                 <div class="col-9 col-sm-10 text-left">
                     <div class="skills-block purple">Personal</div>
@@ -184,10 +187,11 @@
                     in which you must pick up cargo using a truck, and then deliver them, making sure to avoid 
                     any terrain and animals as you make your way to the drop off point. You are scored based
                     on how fast you delivered the cargo, minus points for hitting animals. This game was built 
-                    as a group project in CS576. In terms of production, I was solely responsible for the UI
-                    of the game, including but not limited to the main menu, pause menu and the in-game HUD.
-                    I was also responsible for creating the animal-based AI for the game, which acts as an enemy
-                    that wanders around and runs away from the truck's horn.
+                    as a group project in 
+                    <a href="https://people.cs.umass.edu/~kalo/courses/game_programming/index.html" target="_blank" class="outline">CS576</a>. 
+                    I was responsible for the UI of the game, including but not limited to the main menu, pause menu and the in-game HUD.
+                    I also developed the animal-based AI for the game, which acts as an enemy that wanders around and runs 
+                    away from the truck's horn.
                 </p>
                 <div class="col-9 col-sm-10 text-left">
                     <div class="skills-block purple">CS576</div>
