fixed anchor hashing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/anchor_script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gentium+Basic:wght@700&display=swap" rel="stylesheet">
@@ -17,38 +18,50 @@
 </head>
 
 <body>
-    <div class="container-fluid w-75" id="main-content">
+    <div class="container-fluid" id="main-content">
         <!-- TIMELINE -->
         <div class="preview-section position-fixed" id="preview-section">
             <ul class="preview-section-list position-relative d-flex flex-column justify-content-between">
                 <li class="preview-section-btn" id="lateral-header">
-                    <span class="preview-section-square d-block position-relative"></span>
-                    <span class="preview-section-info pl-3 text-uppercase">HEADER</span>
+                    <a href="#header-section">
+                        <span class="preview-section-square d-block position-relative"></span>
+                        <span class="preview-section-info pl-3 text-uppercase">HEADER</span>
+                    </a>
                 </li>
 
                 <li class="preview-section-btn" id="lateral-about">
-                    <span class="preview-section-square d-block position-relative"></span>
-                    <span class="preview-section-info pl-3 text-uppercase">ABOUT ME</span>
+                    <a href="#about-section">
+                        <span class="preview-section-square d-block position-relative"></span>
+                        <span class="preview-section-info pl-3 text-uppercase">ABOUT ME</span>
+                    </a>
                 </li>
 
                 <li class="preview-section-btn" id="lateral-now">
-                    <span class="preview-section-square d-block position-relative"></span>
-                    <span class="preview-section-info pl-3 text-uppercase">WHAT'S NOW?</span>
+                    <a href="#now-section">
+                        <span class="preview-section-square d-block position-relative"></span>
+                        <span class="preview-section-info pl-3 text-uppercase">WHAT'S NOW?</span>
+                    </a>
                 </li>
 
                 <li class="preview-section-btn" id="lateral-education">
-                    <span class="preview-section-square d-block position-relative"></span>
-                    <span class="preview-section-info pl-3 text-uppercase">EDUCATION</span>
+                    <a href="#education-section">
+                        <span class="preview-section-square d-block position-relative"></span>
+                        <span class="preview-section-info pl-3 text-uppercase">EDUCATION</span>
+                    </a>
                 </li>
 
                 <li class="preview-section-btn" id="lateral-projects">
-                    <span class="preview-section-square d-block position-relative"></span>
-                    <span class="preview-section-info pl-3 text-uppercase">PROJECTS</span>
+                    <a href="#projects-section">
+                        <span class="preview-section-square d-block position-relative"></span>
+                        <span class="preview-section-info pl-3 text-uppercase">PROJECTS</span>
+                    </a>
                 </li>
 
                 <li class="preview-section-btn" id="lateral-skills">
-                    <span class="preview-section-square d-block position-relative"></span>
-                    <span class="preview-section-info pl-3 text-uppercase">SKILLS</span>
+                    <a href="#skills-section">
+                        <span class="preview-section-square d-block position-relative"></span>
+                        <span class="preview-section-info pl-3 text-uppercase">SKILLS</span>
+                    </a>
                 </li>
             </ul>
         </div>
