--- a/index.html
+++ b/index.html
@@ -23,43 +23,43 @@
         <div class="preview-section position-fixed" id="preview-section">
             <ul class="preview-section-list position-relative d-flex flex-column justify-content-between">
                 <li class="preview-section-btn" id="lateral-header">
+                    <span class="preview-section-square d-block position-relative"></span>
                     <a href="#header-section">
-                        <span class="preview-section-square d-block position-relative"></span>
                         <span class="preview-section-info pl-3 text-uppercase">HEADER</span>
                     </a>
                 </li>
 
                 <li class="preview-section-btn" id="lateral-about">
+                    <span class="preview-section-square d-block position-relative"></span>
                     <a href="#about-section">
-                        <span class="preview-section-square d-block position-relative"></span>
                         <span class="preview-section-info pl-3 text-uppercase">ABOUT ME</span>
                     </a>
                 </li>
 
                 <li class="preview-section-btn" id="lateral-now">
+                    <span class="preview-section-square d-block position-relative"></span>
                     <a href="#now-section">
-                        <span class="preview-section-square d-block position-relative"></span>
-                        <span class="preview-section-info pl-3 text-uppercase">WHAT'S NOW?</span>
+                        <span class="preview-section-info pl-3 text-uppercase">NOW</span>
                     </a>
                 </li>
 
                 <li class="preview-section-btn" id="lateral-education">
+                    <span class="preview-section-square d-block position-relative"></span>
                     <a href="#education-section">
-                        <span class="preview-section-square d-block position-relative"></span>
                         <span class="preview-section-info pl-3 text-uppercase">EDUCATION</span>
                     </a>
                 </li>
 
                 <li class="preview-section-btn" id="lateral-projects">
+                    <span class="preview-section-square d-block position-relative"></span>
                     <a href="#projects-section">
-                        <span class="preview-section-square d-block position-relative"></span>
                         <span class="preview-section-info pl-3 text-uppercase">PROJECTS</span>
                     </a>
                 </li>
-
+                
                 <li class="preview-section-btn" id="lateral-skills">
+                    <span class="preview-section-square d-block position-relative"></span>
                     <a href="#skills-section">
-                        <span class="preview-section-square d-block position-relative"></span>
                         <span class="preview-section-info pl-3 text-uppercase">SKILLS</span>
                     </a>
                 </li>
