fixed timeline, updated highlight

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <!-- HEADER -->
-        <div class="page p-5" id="header-section">
+        <div class="page page-highlight-on p-5" id="header-section">
             <div class="row d-flex flex-wrap align-items-center">
                 <div class="
                 offset-3 col-6 pb-3
@@ -305,6 +305,15 @@
         </div>
     </footer>
 
+    <!-- sta width: 654
+      potential changes:
+        starts messing up/looking bad around width: 654px
+            col-sm-10 -> col-sm-12
+            size of margin, padding of main-content?
+            where timeline is?
+        dynamic background-image or some other form of movement
+        animations to timeline
+    -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js" defer></script>
 </body>
