--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             size of margin, padding of main-content?
             where timeline is?
         dynamic background-image or some other form of movement
-        animations to timeline
+        animations to timeline hover?
     -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js" defer></script>
