--- a/index.html
+++ b/index.html
@@ -131,12 +131,11 @@
             <h4 class="text-center">What's Now?</h4>
             <div class="text-center extra"><a href="https://nownownow.com/about">[learn more]</a></div>
             <div>
-                <h5> Work </h5>
                 <p class="indent">
                     <ul>
-                        <li> 1 </li>
-                        <li> 2 </li>
-                        <li> 3 </li>
+                        <li> ending final semester at UMass (expected graduation in May '22) </li>
+                        <li> actively searching for job positions after graduation </li>
+                        <li> expanding knowledge of game development software such as Blender and Unreal Engine </li>
                     </ul>
                     <!--
                     I am actively searching for job positions after graduation. In terms of projects, I am always updating
@@ -144,19 +143,6 @@
                     I am supremely interested in game development, and, more specifically, UI design. I have also found myself
                     messing around with 3D modeling via Blender 3.0 and plan to use what I learn to further my game development 
                     skills.
-                    -->
-                </p>
-
-                <h5> School </h5>
-                <p class="indent">
-                    <ul>
-                        <li> 1 </li>
-                        <li> 2 </li>
-                        <li> 3 </li>
-                    </ul>
-                    <!--
-                    Having just finished up my fall semester, my eyes are set on life after school and ending
-                    my schooling career strong. 
                     -->
                 </p>
             </div>
