--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 <p class="indent">
                     I am an undergraduate student at <a href="https://www.umass.edu" target="_blank" class="outline">UMass Amherst</a> 
                     pursuing a degree in Computer Science, expected to graduate in Spring 2022. Professionally, I am interested in
-                    software engineering, database administration, and game development. In my free time I enjoy watching television series, 
-                    listening to music, playing/watching videogames, and following the NBA.
+                    software engineering and game development. In my free time I enjoy listening to music, playing/watching videogames (mostly FPS), 
+                    and following the NBA.
                 </p>
             </div>
 
@@ -133,9 +133,8 @@
             <div>
                 <p class="indent">
                     <ul>
-                        <li> ending final semester at UMass (expected graduation in May '22) </li>
+                        <li> ending final semester at UMass (graduation in May '22) </li>
                         <li> actively searching for job positions after graduation </li>
-                        <li> expanding knowledge of game development software such as Blender and Unreal Engine </li>
                     </ul>
                     <!--
                     I am actively searching for job positions after graduation. In terms of projects, I am always updating
